下拉刷新控件

--- a/i18n/locales/TXT_en.json
+++ b/i18n/locales/TXT_en.json
@@ -198,8 +198,8 @@
 	"止损价格须远离成本价": "Stop Loss price must differ from cost price",
 	"请输入委托数量": "Enter Order Quantity",
 	"设置止盈止损": "Set TP/SL",
-	"限价单": "Limit Order",
-	"市价单": "Market Order",
+	"限价单": "Limit",
+	"市价单": "Market",
 	"可用余额不足": "Insufficient Balance",
 	"请输入交易金额": "Enter Trade Amount",
 	"下单成功": "Order Placed Successfully",
