--- a/i18n/locales/TXT_zh-CN.json
+++ b/i18n/locales/TXT_zh-CN.json
@@ -395,5 +395,13 @@
 	"消息通知": "消息通知",
     "可买":"可买",
     "确定":"确定",
-    "压力":"压力"
+    "压力":"压力",
+
+    "全部已读":"全部已读",
+    "成交价格":"成交价格",
+    "平多":"平多",
+    "平空":"平空",
+    "挂单已成交，成交价为":"挂单已成交，成交价为:",
+    "提示":"提示",
+    "到底了":"到底了"
 }
