优化搜索卡片

--- a/i18n/locales/TXT_zh-CN.json
+++ b/i18n/locales/TXT_zh-CN.json
@@ -403,5 +403,7 @@
     "平空":"平空",
     "挂单已成交，成交价为":"挂单已成交，成交价为:",
     "提示":"提示",
-    "到底了":"到底了"
+    "到底了":"到底了",
+	"当价格达到止盈":"当价格达到 {price}({percent}) 止盈预估 {profit}",
+	"当价格达到止损":"当价格达到 {price}({percent}) 止损预估 {profit}"
 }
