--- a/i18n/locales/TXT_zh-TW.json
+++ b/i18n/locales/TXT_zh-TW.json
@@ -17,7 +17,7 @@
 	"异动信号": "異動訊號",
 	"主力追踪": "主力追蹤",
 	"支撑位": "支撐位",
-	"支撑":"支撑",
+	"支撑": "支撑",
 	"压力位": "壓力位",
 	"实时涨幅": "即時漲幅",
 	"大单监控": "大單監控",
@@ -114,7 +114,7 @@
 	"获取数据失败": "獲取數據失敗",
 	"杠杆多空比": "槓桿多空比",
 	"5分钟": "5m",
-	"1m":"1m",
+	"1m": "1m",
 	"5m": "5m",
 	"15m": "15m",
 	"30m": "30m",
@@ -393,5 +393,14 @@
 	"消息通知": "消息通知",
 	"可买": "可買",
 	"确定": "確定",
-	"压力":"压力"
+	"压力": "压力",
+	"全部已读": "全部已讀",
+	"成交价格": "成交價格",
+	"平多": "平多",
+	"平空": "平空",
+	"挂单已成交，成交价为": "掛單已成交，成交價為:",
+	"提示": "提示",
+	"到底了": "到底了",
+	"当价格达到止盈": "當價格達到 {price}({percent}) 止盈預估 {profit}",
+	"当价格达到止损": "當價格達到 {price}({percent}) 止損預估 {profit}"
 }
