--- a/i18n/locales/TXT_en.json
+++ b/i18n/locales/TXT_en.json
@@ -17,7 +17,7 @@
 	"异动信号": "Unusual Signals",
 	"主力追踪": "Whale Tracking",
 	"支撑位": "Support Level",
-    "支撑": "Support",
+	"支撑": "Support",
 	"压力位": "Resistance Level",
 	"实时涨幅": "Real-time Gain",
 	"大单监控": "Large Order Monitor",
@@ -114,7 +114,7 @@
 	"获取数据失败": "Failed to fetch data",
 	"杠杆多空比": "Long/Short Leverage Ratio",
 	"5分钟": "5m",
-	"1m":"1m",
+	"1m": "1m",
 	"5m": "5m",
 	"15m": "15m",
 	"30m": "30m",
@@ -393,5 +393,14 @@
 	"消息通知": "Message Notification",
 	"可买": "Available to Buy",
 	"确定": "Confirm",
-    "压力":"Resistance"
+	"压力": "Resistance",
+	"全部已读": "All Read",
+	"成交价格": "Transaction Price",
+	"平多": "Close Long",
+	"平空": "Close Short",
+	"挂单已成交，成交价为": "Pending order filled, transaction price is:",
+	"提示": "Notice",
+	"到底了": "No more content",
+	"当价格达到止盈": "When the price reaches {price} ({percent}), estimated profit {profit}",
+	"当价格达到止损": "When the price reaches {price} ({percent}), estimated loss {profit}"
 }
