增加侧边弹出

--- a/i18n/locales/TXT_en.json
+++ b/i18n/locales/TXT_en.json
@@ -2,7 +2,7 @@
 	"行情": "Market",
 	"首页": "Home",
 	"下载": "Download",
-	"下载简称": "Dl",
+	"下载简称": "DL",
 	"资产": "Assets",
 	"交易": "Trade",
 	"开设账户": "Open Account",
@@ -124,6 +124,8 @@
 	"1D": "1D",
 	"1W": "1W",
 	"1M": "1M",
+	"1小时":"1h",
+	"1天":"1D",
 	"多空持仓人数比": "Long/Short Position Ratio",
 	"多仓人数": "Long Holders",
 	"空仓人数": "Short Holders",
