web 加入我的界面

--- a/i18n/locales/TXT_zh-CN.json
+++ b/i18n/locales/TXT_zh-CN.json
@@ -407,5 +407,9 @@
     "提示":"提示",
     "到底了":"到底了",
 	"当价格达到止盈":"当价格达到 {price}({percent}) 止盈预估 {profit}",
-	"当价格达到止损":"当价格达到 {price}({percent}) 止损预估 {profit}"
+	"当价格达到止损":"当价格达到 {price}({percent}) 止损预估 {profit}",
+
+	"方向":"方向",
+	"占比":"占比",
+	"平仓均价":"平仓均价"
 }
