--- a/i18n/locales/TXT_zh-TW.json
+++ b/i18n/locales/TXT_zh-TW.json
@@ -124,8 +124,8 @@
 	"1D": "1D",
 	"1W": "1W",
 	"1M": "1M",
-	"1小时":"1小时",
-	"1天":"1天",
+	"1小时": "1小时",
+	"1天": "1天",
 	"多空持仓人数比": "多空持倉人數比",
 	"多仓人数": "多倉人數",
 	"空仓人数": "空倉人數",
@@ -404,5 +404,8 @@
 	"提示": "提示",
 	"到底了": "到底了",
 	"当价格达到止盈": "當價格達到 {price}({percent}) 止盈預估 {profit}",
-	"当价格达到止损": "當價格達到 {price}({percent}) 止損預估 {profit}"
+	"当价格达到止损": "當價格達到 {price}({percent}) 止損預估 {profit}",
+	"方向": "方向",
+	"占比": "占比",
+	"平仓均价": "平倉均價"
 }
